# PointcloudSegmentation

./: CMakeLists.txt  README.md  package.xml
cfg/: config_d435.md  config_zed2.md
data/: pt_label.txt
scripts/: dump_obj.py  segment_client.py  segment_scene.py  segment_server.py  trigger_segmentation.py
src/: dump_pointcloud.cpp  dump_scene.cpp
srv/: CurrentSegment.srv  PointCloudIO.srv  SegmentStatus.srv
