<?xml version="1.0"?>
<package format="2">
	<name>PointcloudSegmentation</name>
	<version>0.0.0</version>
	<description>The PointcloudSegmentation package</description>
	<maintainer email="dongliang040@sina.com">Lyu Dongliang</maintainer>
	<license>MIT</license>
	<buildtool_depend>catkin</buildtool_depend>
	<depend>tf2</depend>
	<build_depend>pcl</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>pcl_msgs</build_depend>
	<build_depend>message_generation</build_depend>
	<build_export_depend>pcl</build_export_depend>
	<build_export_depend>roscpp</build_export_depend>
	<build_export_depend>rospy</build_export_depend>
	<build_export_depend>std_msgs</build_export_depend>
	<build_export_depend>sensor_msgs</build_export_depend>
	<build_export_depend>pcl_msgs</build_export_depend>
	<build_export_depend>message_runtime</build_export_depend>
	<exec_depend>message_runtime</exec_depend>
	<exec_depend>pcl</exec_depend>
	<exec_depend>roscpp</exec_depend>
	<exec_depend>rospy</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>sensor_msgs</exec_depend>
	<exec_depend>pcl_msgs</exec_depend>
	<export>
		<!-- Other tools can request additional information be placed here -->
	</export>
</package>
